# djdemo

./: .gitignore  README.md  pyproject.toml
djdemo/: settings.py  urls.py  wsgi.py
djdemo/comapp/: apps.py  urls.py
djdemo/comapp/mappers/: com_exc.py
djdemo/comapp/migrations/: 0001_initial.py
djdemo/comapp/models/: com_exc.py
djdemo/comapp/schemas/: com_exc.py
djdemo/comapp/services/: com_exc.py
djdemo/comapp/views/: com_exc.py
djdemo/common/constants/: http.py
djdemo/common/decorators/: timer.py
djdemo/common/exceptions/: cmm.py  wx.py
djdemo/common/request/: base.py
djdemo/common/utils/: token.py
djdemo/core/decorators/: request.py
djdemo/core/mappers/: base.py
djdemo/core/middlewares/: exception.py  login.py  response.py
djdemo/core/models/: base.py
djdemo/core/query/: filter.py  page.py  sort.py
djdemo/core/schemas/: query.py
djdemo/core/services/: base.py
djdemo/typeapp/: apps.py  urls.py
djdemo/typeapp/mappers/: user.py
djdemo/typeapp/migrations/: 0001_initial.py  0002_alter_user_managers.py
djdemo/typeapp/schemas/: user.py
djdemo/typeapp/services/: auth.py  user.py
djdemo/typeapp/utils/: response.py
djdemo/typeapp/views/: auth.py  user.py
src/common/request/: base.py
src/core/dao/: base.py
src/core/mappers/: base.py
src/core/middlewares/: exception.py  login.py  request.py  response.py
src/core/models/: base.py
src/core/schemas/: base.py
src/core/services/: base.py
src/djdemo/: asgi.py  settings.py  urls.py  wsgi.py
src/typeapp/: apps.py  urls.py
src/typeapp/dao/: user.py
(+9 files in other folders)
