[tool.poetry]
name = "djdemo"
version = "0.1.0"
description = "django demo project"
authors = ["ssshier <livemissaycee@qq.com>"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.0.4"
djangorestframework = "^3.13.1"
pydantic = "^1.9.0"
requests = "^2.27.1"
retry = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = ["pydantic"]